  Previously, only the buffer would be returned, even if more data was requested.
- Added wxPowerEvent (currently MSW-only).
- Make wx-config compatible with Bourne shells.
- Fixed wxDb::Open(wxDbConnectInf) when using connection string (Hellwolf Misty)
- Fixed crash in wxDb::Open() in Unicode build (Massimiliano Marretta)

All (GUI):

- Added wxComboCtrl and wxOwnerDrawnComboBox (Jaakko Salli).
- Added wxTreebook (uses a wxTreeCtrl to control pages).
- Added wxColour/Dir/File/Font/PickerCtrls (Francesco Montorsi).
- Added wxDC::GradientFillLinear/Concentric().
- Added wxHyperlinkCtrl (Francesco Montorsi).
- Added clipboard events (wxEVT_COMMAND_TEXT_COPY/CUT/PASTE).
- Allow to reorder wxGrid columns by drag-and-drop (Santiago Palacios).
- Added wxRadioBox::SetItemToolTip().
- Added support for CMYK JPEG images loading (Robert Wruck).
- Added wxListCtrl::GetSubItemRect() and subitem hit testing (Agron Selimaj).
- Added wxKeyEvent::GetModifiers().
- Added wxDialog::SetEscapeId().
- wxItemContainerImmutable::FindString unified (affects wxRadioBox, wxListBox,
  wxComboBox and wxChoice).
- wxWindow::Fit() now works correctly for frames and dialogs too.
- Added access to the border size between pages and controller in book
  based controls (wxBookCtrlBase::Get/SetInternalBorder).
- Added initial wxRichTextCtrl implementation.
- All book based controls (notebook, treebook etc.) share now the same
  options for orientation (wxBK_TOP, wxBK_DEFAULT, ...) instead of duplicated
  wxLB_TOP, wxNB_TOP, wxCHB_TOP, wxTBK_TOP.
- Added parent window parameter to wxHelpController constructor
  and added SetParentWindow/GetParentWindow.
- wxMultiChoiceDialog uses now wxCheckListBox if possible, wxListBox if not.
- Added wxBitmapButton::SetHoverBitmap().
- Access to titles through Get/SetTitle is available now only for top level
  windows (wxDialog, wxFrame).
- Fixed memory leak of pending events in wxEvtHandler.
- Added wxRadioBox::IsItemEnabled/Shown().